添加启动脚本